Use pitest 1.9.3 that supports jvm args